# crew_agent_for_ticktick

./: .cursorrules
ticktick_todo_progress_report_flow/: .gitignore  README.md  pyproject.toml  ticktick_documentation.md
ticktick_todo_progress_report_flow/src/ticktick_todo_progress_report_flow/: __init__.py  main.py
ticktick_todo_progress_report_flow/src/ticktick_todo_progress_report_flow/crews/ticktick_crew/: ticktick_report_generation_crew.py
ticktick_todo_progress_report_flow/src/ticktick_todo_progress_report_flow/crews/ticktick_crew/config/: agents.yaml  tasks.yaml
ticktick_todo_progress_report_flow/src/ticktick_todo_progress_report_flow/tools/: ticktick_test.py  ticktick_tool.py
