[project]
name = "ticktick_todo_progress_report_flow"
version = "0.1.0"
description = "ticktick-todo-progress-report-flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.79.4,<1.0.0",
]

[project.scripts]
kickoff = "ticktick_todo_progress_report_flow.main:kickoff"
plot = "ticktick_todo_progress_report_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
